# act-guardian

./: README.md  pyproject.toml
.github/workflows/: ci.yml
act_guardian/: __init__.py  core.py
act_guardian/examples/: llama_with_guard.py  mlp_dead_neuron.py
tests/: test_act_guardian.py
