[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "act-guardian"
version = "0.1.0"
description = "Prevent Dead Neurons in LLMs with Adaptive Noise Injection"
readme = "README.md"
authors = [{name = "Hari Tedjamantri", email = "haryganteng06@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["llm", "dead neuron", "activation guard", "stable training"]
requires-python = ">=3.8"
dependencies = ["torch>=1.13.0", "transformers>=4.30.0"]

[project.urls]
Homepage = "https://github.com/ebc-clip/act-guardian"
Repository = "https://github.com/ebc-clip/act-guardian"

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]
